# Numerical

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
cmake/: InitUCMake.cmake
include/: Domain.hpp  Interpolation.h  LinearSystem.h  MathFunctions.h  NIntegration.hpp  RNG.hpp  type.hpp
include/FEM/: FEM.hpp  FEM1DApp.hpp  FEM2DApp.hpp  FEM_MG.hpp
include/Geometry/Mesh/: HEMesh.hpp
include/Geometry/ParameterDesign/: Approximation.h  Bezier.hpp  Interpolation.h  ParameterCurve.h  Rational.h  Subdivision.h
include/NIntegrate/: 2DIntegrate.hpp  Integrate.hpp  MCIntegrate.hpp
include/Visualization/: 2D.h  Interpolation.h  Visualizer.h
include/imgui/: imgui_vk.h  implot.h  implot_internal.h
lib/: Numerical_Visualizationd.lib
src/FEM/: CMakeLists.txt  FEM.cpp  FEM1D.cpp  FEM1DApp.cpp  FEM2DApp.cpp
src/Geometry/: CMakeLists.txt  HEMesh.cpp
src/Imgui/: CMakeLists.txt  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_vulkan.cpp  imgui_tables.cpp  imgui_widgets.cpp  implot.cpp  implot_demo.cpp  implot_items.cpp  ingui_vk.cpp
src/Tools/: CMakeLists.txt  spherical_harmonics.cc
src/Visualization/: 2D.cpp  Visualizer.cpp
src/test/00/: CMakeLists.txt  test.cpp
src/test/Bezier/: test.cpp
src/test/FEM/FEM1D/: CMakeLists.txt  test.cpp
src/test/FEM/FEM1DApp/: test.cpp
src/test/FEM/FEM1DAppShishskin/: test.cpp
src/test/FEM/FEM2DApp/: CMakeLists.txt  shaders.hlsl  test.cpp
src/test/FEM1D/: CMakeLists.txt  test.cpp
src/test/ImageProcessing/Pyramid/: CMakeLists.txt
src/test/Imgui/: CMakeLists.txt  main.cpp
src/test/Implot/: CMakeLists.txt  main.cpp
src/test/Interpolation/: CMakeLists.txt  test.cpp
src/test/LoopSubdivision/: shaders.hlsl  test.cpp
src/test/NIntegrate/: CMakeLists.txt  main.cpp
src/test/Para3DCurve/: CMakeLists.txt  test.cpp
src/test/ParaCurves/: test.cpp
src/test/Torch/: CMakeLists.txt  test.cpp
src/test/Visualization/: CMakeLists.txt  main.cpp
src/tests/: CMakeLists.txt  FEM2DApp.cpp  Interpolation.cpp  Pyramid.cpp
tests/: 00.cpp  CMakeLists.txt  Para3DCurve.hlsl  drjit.cpp
